--- a/index.html
+++ b/index.html
@@ -3,63 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task List</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-        .task-list {
-            list-style: none;
-            padding: 0;
-        }
-        .task-list li {
-            margin: 10px 0;
-        }
-        .task-list a {
-            text-decoration: none;
-            color: #007BFF;
-            font-weight: bold;
-        }
-        .task-list a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Task List</h1>
-        <ul class="task-list">
-            <li><a href="/html_1/index.html">Task 1</a></li>
-            <li><a href="/html_2/index.html">Task 2</a></li>
-            <li><a href="/html_3/index.html">Task 3</a></li>
-            <li><a href="/html_4/index.html">Task 4</a></li>
-            <li><a href="/html_5/index.html">Task 5</a></li>
-            <li><a href="/html_6/index.html">Task 6</a></li>
-            <li><a href="/html_7/index.html">Task 7</a></li>
-            <li><a href="/html_8/index.html">Task 8</a></li>
-            <li><a href="/html_9/index.html">Task 9</a></li>
-            <li><a href="/html_10/index.html">Task 10</a></li>
-            <li><a href="/html_11/index.html">Task 11</a></li>
-            <li><a href="/html_12/index.html">Task 12</a></li>
-            <li><a href="/html_13/index.html">Task 13</a></li>
-        </ul>
+    <div>
+        <a href="/html_1/index.html">Task 1</a>
+        <a href="/html.2_3/index.html">Task 2</a>
+        <a href="/html.3_4/index.html">Task 3</a>
+        <a href="/html.4_5/index.html">Task 4</a>
+        <a href="/html.5_6/index.html">Task 5</a>
+        <a href="/html.6_7/index.html">Task 6</a>
+        <a href="/html.7_8/index.html">Task 7</a>
+        <a href="/html.8_9/index.html">Task 8</a>
+        <a href="/html.10_11/index.html">Task 9</a>
+        <a href="/html.11_12/index.html">task 10</a>
+ 
     </div>
 </body>
 </html>
