--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <a href="/html_1/index.html">Task 1</a>
-        <a href="/html.2_3/index.html">Task 2</a>
-        <a href="/html.3_4/index.html">Task 3</a>
-        <a href="/html.4_5/index.html">Task 4</a>
-        <a href="/html.5_6/index.html">Task 5</a>
-        <a href="/html.6_7/index.html">Task 6</a>
-        <a href="/html.7_8/index.html">Task 7</a>
-        <a href="/html.8_9/index.html">Task 8</a>
-        <a href="/html.10_11/index.html">Task 9</a>
-        <a href="/html.11_12/index.html">task 10</a>
- 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style1.css" />
+    <title>Proj</title>
+  </head>
+  <body>
+      <h1 class="task">Task List </h1>
+    <div class="my_project">
+      <a href="/html_1/index.html">Task 1</a>
+      <a href="/html.2_3/index.html">Task 2</a>
+      <a href="/html.3_4/index.html">Task 3</a>
+      <a href="/html.4_5/index.html">Task 4</a>
+      <a href="/html.5_6/index.html">Task 5</a>
+      <a href="/html.6_7/index.html">Task 6</a>
+      <a href="/html.7_8/index.html">Task 7</a>
+      <a href="/html.8_9/index.html">Task 8</a>
+      <a href="/html.10_11/index.html">Task 9</a>
+      <a href="/html.11_12/index.html">Task 10</a>
     </div>
-</body>
+  </body>
 </html>
